<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/my_divider"
    android:dividerPadding="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/refresh_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF7F00"
            android:src="@drawable/refresh" />

        <TextView
            android:id="@+id/refresh_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/refresh_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/add_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#FF7F00"
            android:src="@drawable/add" />

        <TextView
            android:id="@+id/add_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/add_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/zoom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF7F00"
            android:src="@drawable/zoom" />

        <TextView
            android:id="@+id/zoom_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/zoom_description" />
    </LinearLayout>

</LinearLayout>